<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouCantHide</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_registration_confirm">RegistrationConfirm</string>
    <string name="title_activity_game_creation">GameCreation</string>
    <string name="title_activity_new_game_confirm">NewGameConfirm</string>
    <string name="reg_first_name">First Name</string>
    <string name="reg_last_name">Last Name</string>
    <string name="reg_user_name">User Name</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_confirm">Re-Enter Password</string>
    <string name="button_send">Send</string>
    <string name="rg_field">Size of Playing Field:</string>
    <string name="radio_field_sm">Small</string>
    <string name="radio_field_md">Medium</string>
    <string name="radio_field_lg">Large</string>
    <string name="rg_numit">Number of Its:</string>
    <string name="radio_num_it_sm">One It</string>
    <string name="radio_num_it_md">Two Its</string>
    <string name="radio_num_it_lg">Team (50% It)</string>
    <string name="rg_duration">Game Duration:</string>
    <string name="radio_duration_sm">20 min</string>
    <string name="radio_duration_md">40 min</string>
    <string name="radio_duration_lg">60 min</string>
    <string name="title_activity_game_list">GameList</string>
    <string name="bCreate">Create</string>
    <string name="bRefresh">Refresh</string>
    <string name="title_activity_game_lobby">GameLobby</string>
    <string name="game_lobby_player_label">Player Queue:</string>
    <string name="game_lobby_player_list"></string>
    <string name="title_activity_not_it">NotIt</string>
    <string name="button_im_home">I\'m Home</string>

</resources>